# GMOCUv2

./: .gitignore  README.md
.githooks/: commit-msg
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: bootstrap.py  config.py  core.py  database.py  errors.py  main.py  migrations.py  models.py  schemas.py
backend/app/application/: activity_logs.py  attachments.py  database_import.py  features.py  ice_credentials.py  imports.py  legacy_mutations.py  lookups.py  normalization.py  organism_lists.py  organisms.py  plasmids.py  reports.py  settings.py  validation.py
backend/app/routers/: activity_logs.py  features.py  ice.py  ice_credentials.py  organism_selections.py  organisms.py  plasmids.py  reports.py  settings.py
backend/app/services/: fileservers.py  gsheets.py  ice.py
backend/tests/: test_api.py  test_core.py
example/: glossary_Jores_lab.xlsx  gmocu.json  organisms.xlsx  pmiso000.gb
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: command-palette.tsx  confirm-dialog.tsx  create-dialog.tsx  database-import-dialog.tsx  date-input.tsx  (+7 more)
legacy/: GMOCU-0.4_env_packages.txt  README.md  autocomplete.py  conda_environment.txt  constants.py  docker-compose.yml  gmocu.py  gmocu.spec  gmocu.sql  helpers.py  import_data.py  layouts.py  migrations.py  pyrightconfig.json  pysimplesqlmod.py
legacy/Downloads/: Downloads.txt
scripts/: run-backend.sh  run-dev.sh  run-frontend.sh
(+31 files in other folders)
